--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "fly-test-deployment-fall"
+app = "alpine-envinfo-crash"
 primary_region = "otp"
 
 [env]
@@ -7,5 +7,5 @@ primary_region = "otp"
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = "suspend"
   auto_start_machines = true
